--- a/public/student-info-test.css
+++ b/public/student-info-test.css
@@ -112,7 +112,7 @@ body {
 
 .button {
   margin-top: 20px;
-  margin-right: 50px;
+  /*margin-right: 50px;*/
   width: 140px;
   height: 45px;
   font-size: 14px;
