--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -304,8 +304,8 @@ form {
     font-size: 25px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    padding-bottom: 15px;
+    justify-content: center;
+    padding-bottom: 10px;
 }
 
 #dailyLog {
@@ -640,6 +640,7 @@ p.errorMessage {
 
 .first {
     margin-left: 0px;
+    border-top-left-radius: 10px;
 }
 
 #homeworkStatusDiv {
@@ -656,6 +657,8 @@ p.errorMessage {
 
 .selected {
     height: 100%;
+    padding-top: 15px;
+    padding-bottom: 5px;
 }
 
 .formEnd {
@@ -906,14 +909,14 @@ p.errorMessage {
 .popup {
   visibility: hidden;
   width: 170px;
-  background-color: #555;
+  background-color: rgb(150, 150, 150);
   color: #fff;
   text-align: center;
   border-radius: 6px;
   padding: 8px 0px 8px 0px;
   position: absolute;
-  z-index: 3;
-  bottom: 5.7%;
+  z-index: 4;
+  bottom: 6.5%;
   right: 2%
   /*left: 50%;*/
   /*margin-left: -80px;*/
