--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -15,16 +15,66 @@ body {
 #student-data-section {
     height: 100%;
     width: 100%;
+    overflow-y: auto;
 }
 
-#scores-chart {
+#big-picture-info {
+    position: sticky;
+    top: 0;
+    background-color: white;
+}
+
+/* #scores-chart {
     overflow-y: auto;
     height: 100%;
-}
+} */
 
 #hw-canvas-div {
-    width: 80%;
-    height: 80%;
+    /* width: 100%;
+    height: 100%; */
+    margin: 0px 50px 0px 50px;
+}
+
+#student-general-notes-div {
+    margin: 0px 50px 50px 50px;
+    max-width: 500px;
+}
+
+.student-general-note {
+    background-color: #C4CCE8;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 5px 20px 5px 5px;
+    position: relative;
+}
+
+.student-general-note .delete {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: white;
+    color: #C4CCE8;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+#student-general-notes-input {
+    resize: none;
+    display: block;
+    width: 400px;
+    height: 50px;
+    font-size: 16px;
+    font-weight: 300;
+    border-radius: 10px; 
 }
 
 .fixed {
@@ -532,7 +582,7 @@ button {
   background-color: green;
 }
 
-textarea {
+.textarea {
     margin-top: 15px;
     width: 100%;
 }
