--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -22,6 +22,7 @@ body {
     position: sticky;
     top: 0;
     background-color: white;
+    z-index: 1;
 }
 
 /* #scores-chart {
@@ -40,11 +41,17 @@ body {
     width: 400px;
 }
 #student-general-notes {
-    max-height: 250px;
+    max-height: 400px;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
     padding: 0 10px 0 10px
+}
+
+#student-general-notes .time {
+    font-weight: 200;
+    font-size: 12px;
+    color: #8A8B8A;
 }
 
 .student-general-note {
@@ -52,7 +59,6 @@ body {
     margin-bottom: 10px;
     padding: 5px 25px 5px 10px;
     position: relative;
-    max-width: 70%;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 
@@ -84,13 +90,21 @@ body {
     right: -20px;
 }
 
-.student-general-note.right {
+#student-general-notes .right {
     align-self: flex-end;
+    max-width: 80%;
+}
+
+#student-general-notes .right .student-general-note{
     background-color: #C4CCE8;
 }
 
-.student-general-note.left {
+#student-general-notes .left {
     align-self: flex-start;
+    max-width: 80%;
+}
+
+#student-general-notes .left .student-general-note{
     background-color: #CCE8C4;
 }
 
