fixed input width

--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -146,7 +146,8 @@ body {
 .student-notes-input {
     resize: none;
     display: block;
-    width: 99%;
+    width: 100%;
+    box-sizing: border-box;
     height: 50px;
     font-size: 16px;
     font-weight: 300;
