--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -246,6 +246,16 @@ body {
     border-width: 1px 0px 2px 0px;
 }
 
+.scoresHeaders {
+    height: 2.5%;
+    display: grid;
+    grid-template-columns: 14% 18% 18% 18% 18% 14%;
+    grid-template-rows: 100%;
+    text-align: center;
+    border-style: solid;
+    border-width: 1px 0px 2px 0px;
+}
+
 #englishLessons {
     height: 82%;
     display: grid;
@@ -322,6 +332,22 @@ body {
 }
 
 .gridBox2:nth-child(-n+3) {
+    border-top-width: 0px;
+}
+
+.gridBoxScores {
+    border-style: solid;
+    border-color: black;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.gridBoxScores:nth-child(-n+6) {
     border-top-width: 0px;
 }
 
@@ -821,6 +847,10 @@ p.errorMessage {
     display: none;
 }
 
+#scaledScores {
+    display: none;
+}
+
 #homeworkPopup {
     display: none;
     width: 350px;
@@ -902,6 +932,10 @@ p.errorMessage {
 
 #toggleDiv {
     height: 10%;
+}
+
+#scoresAnswersToggle {
+    height: 7.5%;
 }
 
 #timingBlock {
@@ -1202,9 +1236,26 @@ p.errorMessage {
   margin-left: 20px;
 }
 
+#fullAnswersButton {
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+
+#scoresButton {
+  margin-bottom: 15px;
+}
+
 .formBody {
-    height: 85%;
+    height: 92%;
     overflow-y: scroll;
+}
+
+.scoresBody {
+    height: 75%;
+    overflow-y: scroll;
+    display: grid;
+    grid-template-columns: 14% 18% 18% 18% 18% 14%;
+    grid-auto-rows: 1.3em;
 }
 
 .redOnHover:hover {
