--- a/public/Site Templates/site-wide.css
+++ b/public/Site Templates/site-wide.css
@@ -29,3 +29,10 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+:focus {
+  outline: none;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(135, 168, 247);
+}
