--- a/public/student-info-test.css
+++ b/public/student-info-test.css
@@ -117,6 +117,9 @@ body {
 .justify-space-evenly {
   justify-content:space-evenly;
 }
+.align-flex-end {
+  align-items: flex-end;
+}
 
 .button {
   margin-top: 20px;
