--- a/public/student-info-test.css
+++ b/public/student-info-test.css
@@ -225,19 +225,19 @@ body {
 }
 
 .english {
-  background-color: #4848FF;
+  background-color: #5600F7;
 }
 
 .math {
-  background-color: #FF48A3;
+  background-color: #F70056;
 }
 
 .reading {
-  background-color: #FFFF48;
+  background-color: #00E6BC;
 }
 
 .science {
-  background-color: #48FFA3;
+  background-color: #C00BE0;
   
 }
 
