--- a/public/Dashboard/Dev.css
+++ b/public/Dashboard/Dev.css
@@ -13,6 +13,10 @@ body {
   justify-content: center;
 }
 
+.justify-space-between {
+  justify-content: space-between;
+}
+
 .align-center {
   align-items: center;
 }
