--- a/public/Site Templates/site-wide.css
+++ b/public/Site Templates/site-wide.css
@@ -36,3 +36,13 @@
   border-width: 2px;
   border-color: rgb(135, 168, 247);
 }
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+}
