--- a/public/math-program.css
+++ b/public/math-program.css
@@ -18,9 +18,12 @@ body {
 }
 
 .expectation-input {
-  font-size: 1.5em;
+  font-size: 1em;
   font-weight: bold;
-  width: 100%;
+  width: 500px;
+  height: 4.5em;
+  border-width: 2px;
+  display: block;
 }
 
 #student-log-notes-div {
