--- a/public/inquiry.css
+++ b/public/inquiry.css
@@ -242,6 +242,7 @@ border-left: 17px solid #23468c;
   border-radius: 10px;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   margin-bottom: 5px;
+  display: block;
 }
 
 .textarea {
@@ -260,7 +261,9 @@ border-left: 17px solid #23468c;
 }
 
 select {
-  background: url("Images/select-dropdown.png") no-repeat 95%;
+  background: url("Images/select-dropdown.png") no-repeat;
+  background-position: center right;
+  background-origin: content-box;
   -webkit-appearance: none;
 }
 
@@ -296,6 +299,7 @@ select {
 }
 
 .label {
+  display: inline-block;
   color: black;
 }
 
@@ -315,7 +319,7 @@ select {
   margin-left: 5px;
   margin-bottom: 5px;
   position: relative;
-  box-sizing: border-box;
+  box-sizing: content-box;
 }
 
 .more-info::before {
