--- a/public/math-program.css
+++ b/public/math-program.css
@@ -4,8 +4,8 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
 }
 
 #student-general-info {
@@ -26,12 +26,40 @@ body {
 }
 
 #student-log-notes-div {
-  margin: 50px 0px 50px 20px;
+  margin: 50px 0px 0px 20px;
   width: 400px;
   border-color: black;
   border-style: solid;
   border-radius: 10px;
   border-width: 1px;
+}
+
+.mathProgramHelp {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 5px 5px;
+  cursor: pointer;
+}
+
+.helpModal {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(0, 0, 0, 0.5);
+  z-index: 100;
+}
+
+.helpContainer {
+  background-color: white;
+  max-width: 70%;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 /* .section-notes-div {
@@ -185,6 +213,7 @@ body {
     padding: 1%;
     border-top-left-radius: 10px;
     align-self: stretch;
+    position: relative;
 }
 
 .lessonHeaders {
@@ -298,7 +327,6 @@ body {
 }
 
 .button {
-  margin-top: 20px;
   width: 140px;
   height: 45px;
   font-size: 14px;
