--- a/public/math-program.css
+++ b/public/math-program.css
@@ -294,8 +294,8 @@ body {
     grid-template-columns: 80% 20%;
     grid-auto-rows: auto;
     overflow-y: auto;
-    border-style: solid;
-    border-width: 0px 0px 1px 0px;
+    border-top-left-radius: 11px;
+    border-bottom-left-radius: 11px;
 }
 
 .button2 {
