--- a/public/phonics-program.css
+++ b/public/phonics-program.css
@@ -4,8 +4,6 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  height: 100vh;
-  width: 100vw;
 }
 
 #student-general-info {
@@ -265,6 +263,8 @@ body {
     grid-template-columns: 80% 20%;
     grid-auto-rows: auto;
     overflow-y: auto;
+    border-top-left-radius: 11px;
+    border-bottom-left-radius: 11px;
 }
 
 .button2 {
