--- a/public/Dashboard/Admin.css
+++ b/public/Dashboard/Admin.css
@@ -118,7 +118,7 @@ body {
 }
 
 .rangeInput > :first-child::after {
-  margin: 0 5px 0 5px;
+  margin: 0 10px 0 10px;
   content: "to";
 }
 
@@ -146,7 +146,7 @@ body {
   font-weight: 500;
   margin: 0;
   padding-left: 10px;
-  padding-right: 20px;
+  padding-right: 25px;
   border: none;
   background: url("../Images/select-dropdown.png") no-repeat 95%;
   color: #110D65;
@@ -218,4 +218,12 @@ p.errorMessage {
 h1 {
   font-size: 48px;
   margin: 0;
+}
+
+.feedback_input {
+  height: 100px;
+  width: 500px;
+  resize: none;
+  display: block;
+  font-size: 16px;
 }
