--- a/public/subject-tutoring-dash.css
+++ b/public/subject-tutoring-dash.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   overflow-y: hidden;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
 }
 
@@ -26,7 +26,7 @@ body {
   border-width: 2px;
 }
 
-#student-log-notes-div {
+#student-general-notes-div {
   margin: 50px 0px 50px 20px;
   width: 400px;
   border-color: black;
