--- a/public/Dashboard/Secretary.css
+++ b/public/Dashboard/Secretary.css
@@ -4,64 +4,6 @@ body {
   margin: 0;
 }
 
-.flex-row {
-  display: flex;
-  flex-direction: row;
-}
-
-.justify-center {
-  justify-content: center;
-}
-
-.align-center {
-  align-items: center;
-}
-
-.add-user-section {
-  display: none;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgb(0, 0, 0, 0.5);
-}
-
-.heading-block {
-  background-color: #110D65;
-  font-size: 24px;
-  color: white;
-  text-align: center;
-  padding: 1%;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  align-self: stretch;
-}
-
-.registration-block {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: stretch;
-  background-color: white;
-  max-height: 80%;
-  /* height: 90vh; */
-  /*min-height: 400px;*/
-  border-radius: 10px;
-  box-shadow: 0px 8px 15px rgb(0, 0, 0, 0.1);
-  /* max-width: 650px; */
-}
-
-#form-scroll-block {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  overflow-x: hidden;
-  overflow-y: auto;
-  padding: 25px;
-}
-
 .input-row {
   display: flex;
   flex-direction: row;
@@ -124,8 +66,15 @@ select {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
   color: #110D65;
+}
+
+.feedback_input {
+  height: 100px;
+  width: 500px;
+  resize: none;
+  display: block;
+  font-size: 16px;
 }
 
 .button {
@@ -145,41 +94,45 @@ select {
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
-}
+  }
 
-.button:hover {
-  background-color: #110D65;
-  box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
-  color: #fff;
-  transform: translateY(-7px);
-}
+  .button:hover {
+    background-color: #110D65;
+    box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+  }
 
-.loader {
+  p {
+    margin: 0;
+    padding: 0;
+  }
+  
+.add-user-section {
   display: none;
-  border: 20px solid white;
-  border-top: 20px solid #110D65;
-  border-radius: 50%;
-  width: 100px;
-  height: 100px;
-  animation: spin 2s linear infinite;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(0, 0, 0, 0.5);
+  z-index: 100;
+}
+
+#navigationModal {
+  padding: 25px;
+  background-color: white;
+  border-radius: 10px;
+  position: relative;
+}
+
+#navigationModal .close {
   position: absolute;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-p.errorMessage {
-  color: red;
-}
-
-h1 {
-  font-size: 48px;
-  margin: 0;
+  top: 10px;
+  right: 15px;
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  cursor: pointer;
 }
