inquiry cosmetic changes

--- a/public/inquiry.css
+++ b/public/inquiry.css
@@ -284,6 +284,13 @@ select {
   content: url("Images/select-dropdown.png");
 }
 
+.ui.active.selection.dropdown {
+  outline: none !important;
+  border-style: solid !important;
+  border-width: 2px !important;
+  border-color: rgb(135, 168, 247) !important;
+}
+
 .input:disabled {
   visibility: hidden;
 }
@@ -318,6 +325,7 @@ select {
 .label {
   display: inline-block;
   color: black;
+  margin-bottom: 5px;
 }
 
 .more-info {
@@ -333,8 +341,6 @@ select {
   border-radius: 50%;
   border-color: lightslategray;
   border-width: 1px;
-  margin-left: 5px;
-  margin-bottom: 5px;
   position: relative;
   box-sizing: content-box;
 }
@@ -381,6 +387,10 @@ select {
   border-style: solid;
   border-width: 2px;
   margin: 10px;
+}
+
+.addRemoveButton {
+  vertical-align: middle;
 }
 
 p {
