--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -39,26 +39,43 @@ div p {
     border-radius: 15px;
 }
 
-.heading-block {
+.formTab {
+    display: flex;
+    flex-direction: row;
+    height: 8%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.headingBlock {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 10%;
+    height: 100%;
+    width: 50%;
     background-color: #110D65;
-    font-size: 24px;
+    font-size: 14px;
     color: white;
     text-align: center;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
 
-.formBody {
-    height: 90%;
-    overflow-y: scroll;
+.headingBlock:first-child{
+    border-top-right-radius: 0px;
 }
 
-.input-row-center {
+.headingBlock:last-child{
+    border-top-left-radius: 0px;
+}
+
+.activeTab{
+    background-color: white;
+    color: black;
+}
+
+.inputRowCenter {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -68,17 +85,17 @@ div p {
 }
 
 .lessonHeaders {
-    height: 3%;
+    height: 4%;
     display: grid;
     grid-template-columns: 65% 15% 20%;
     grid-template-rows: 100%;
     text-align: center;
     border-style: solid;
-    border-width: 1px 0px 2px 0px;
+    border-width: 0px 0px 2px 0px;
 }
 
 .lessonBody {
-    height: 87%;
+    height: 89%;
     display: grid;
     grid-template-columns: 65% 15% 20%;
     grid-auto-rows: auto;
@@ -92,7 +109,7 @@ div p {
     cursor: pointer;
 }
 
-.gridBox-3 {
+.gridBox3 {
     border-style: solid;
     border-color: black;
     border-left-width: 0px;
@@ -104,15 +121,15 @@ div p {
     align-items: center;
 }
 
-.gridBox-3:nth-child(-n+3) {
+.gridBox3:nth-child(-n+3) {
     border-top-width: 0px;
 }
 
-.gridBox-3:nth-child(3n) {
+.gridBox3:nth-child(3n) {
     border-right-width: 0px;
 }
 
-.student-notes-input {
+.studentNotesInput {
     resize: none;
     display: block;
     width: 100%;
@@ -124,13 +141,9 @@ div p {
     margin-top: 10px;
 }
 
-.chat-area-hidden {
-    display: none;
-}
-
-.chat-area-visible {
+.chatArea {
     background-color: yellowgreen;
-    height: calc(80% - 10px);
+    height: calc(82% - 10px);
     display: block;
 }
 
@@ -138,7 +151,7 @@ div p {
     display: none;
 }
 
-.visible {
+.visibleBlock {
     display: block;
 }
 
@@ -154,7 +167,7 @@ div p {
     padding-left: 1vw;
 }
 
-#mainBody {
+.mainBody {
     position: relative;
     height: 91vh;
     width: 100vw;
@@ -169,6 +182,30 @@ div p {
 
 #nameSection {
     height: 10%;
+    width: 100%;
     align-items: center;
-    background-color: blue;
+    /*background-color: blue;*/
+    background-color: #8986b2;
+}
+
+#scores-chart {
+    margin-left: 3%;
+    background-color: white;
+    height: 80%;
+    width: 67%;
+    flex: 1;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: row;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
 }
